--- a/Synchronized.WebApp/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Synchronized.WebApp/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<ApplicationUser> SignInManager
+﻿@using Synchronized.Domain;
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
